--- a/Style.css
+++ b/Style.css
@@ -15,9 +15,8 @@ body {
 }
 
 .container {
-  height: 1440px;
   width: 800px;
-  margin: 30px auto;
+  margin: 48px auto 28px;
 
   border-radius: 24px;
   background-color: #F0E8C2;
@@ -81,5 +80,10 @@ ul, p {
 footer {
   text-align: center;
   color: #F0E8C2;
-  font-size: 16px;
+  font-size: 22px;
+  padding-bottom: 48px;
+}
+
+footer img {
+  vertical-align: middle;
 }
